# elephants

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  flake.nix  hPxm.cabal
include/: ppm.h
src/: MyLib.hs  Ppm.chs  ppm.c  ppm.h
