cabal-version:      3.0
name:               hPxm
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             D. Sunshine
maintainer:         david@sunshines.org
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files: src/ppm.c, src/ppm.h

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    other-modules:    Ppm
    include-dirs:     ./src
    cc-options:       -Wall -Wextra
    includes:         src/ppm.h
    install-includes: src/ppm.h
    c-sources:        src/ppm.c
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1
    --build-tool-depends: c2hs:c2hs
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite hPxm-test
    import:           warnings
    default-language: Haskell2010
    other-modules:    Ppm
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-tool-depends: c2hs:c2hs
    build-depends:
        base ^>=4.18.2.1,
        hPxm
